--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "An example of using TypeScript with Architect!",
   "scripts": {
-    "start": "npx sandbox",
+    "start": "arc sandbox",
     "prestart": "npm run build",
     "deploy": "arc deploy",
     "predeploy": "npm run build",
